kustomization/overlays/prod/argo-cd/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: argo-cd-ingress
spec:
  rules:
    - host: argo-cd.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: http
            path: /
            pathType: Prefix
